--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razorpay</title>
    <link rel="stylesheet" href="index.css">
+   <link rel="shortcut icon" href="./images/razorpay.svg" type="image/x-icon">
 </head>
-<body>
+<body class="overflow-x-hidden">
 <!--navbar-->
     <nav class="bg-deepblue">
        <div class="relative w-[1080px] mx-auto flex items-center justify-between">
@@ -67,24 +68,91 @@
     </nav>
 
  <!--hero-sectiom-->
-    <section class="relative bg-deepblue">
-         <div class=" flex flex-row justify-between items-center mx-auto w:10/12">
-            <div>
-                <h1>Power Your Finance, Grow Your business</h1>
+    <section class="relative bg-deepblue ">
+         <div class="w:10/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto ">
+            <div class="flex-col gap-4 space-y-8">
+                <h1 class="font-mulish font-bold text-[40px] leading-1.2 text-white">Power Your Finance, Grow Your business</h1>
                 <div class="w-6 h-1 bg-greenlight"></div>
-                <p>Accept payments from customers. Automate payouts to vendors & employees. Never run out of working capital.</p>
-                <button>Sign Up Now</button>
+                <p class="font-mulish text-[18px] text-white leading-7 opacity-70">Accept payments from customers. Automate payouts to vendors & employees. Never run out of working capital.</p>
+                <button class="bg-lightblue text-white rounded-md font-mulish font-bold hover:bg-lightblue500  transition-all duration-200 py-[14px] px-[18px]">Sign Up Now</button>
             </div>
             <!--left part-->
-              <img src="./images/hero-illustration.jpg" alt="" srcset="">
+              <img src="./images/hero-illustration.jpg" alt="" srcset="" class="max-w-[680px] w-full ">
             <!--Right part-->
          </div>
 
-         <div>
-             <img src="./images/hero-shape.svg" alt="">
+         <div class="overflow-hidden w-[102%] absolute left-0 right-0">
+             <img src="./images/hero-shape.svg" alt="" class="w-full object-fill ">
          </div>
          <!--Shape part-->
+    </section>
 
+   <!-- Feature section -->
+    <section class="relative mt-[160px] overflow-hidden">
+       <img src="./images/feature-section1-dottedrows.png" loading="lazy" width="233px" height="167px" class="absolute -top-[8rem] left-[4rem]">
+       <img src="./images/feature-section1-dottedrows.png" loading="lazy" width="233px" height="167px" class="absolute top-[0rem] right-0 inline-block rotate-180">
+       <div class="relative w-11/12 max-w-[1080px] mx-auto pt-0">
+          <h2 class="font-mulish font-extrabold text-center text-2xl leading-1.2">Accept Payments with Razorpay Payment Suite</h2>
+          <!--heading-->
+          <div class="w-6 h-1 mx-auto mt-4 mb-6 bg-lightblue"></div>
+          <!--content box-->
+          <div class="w-full bg-white min-h-[520px] flex rounded-md relative p-10 py-12 border">
+             <div class="flex flex-col justify-between w-full">
+               <h3 class="font-mulish text-[28px] leading-10 font-bold max-w-[500px] ">
+                  Supercharge your business with the all‑powerful <span class="text-lightblue"> Payment Gateway</span>
+               </h3>
+               <ul class="space-y-2">
+                  <li class="font-mulish flex items-center space-x-2">
+                     <i data-feather="" class="text-greenlight">↠</i>
+                     <span>100+ Payment Methods</span>
+                  </li>
+                  <li class="font-mulish flex items-center space-x-2">
+                     <i data-feather="check" class="text-greenlight">↠</i>
+                     <span>Industry Leading Success Rate</span>
+                  </li>
+                  <li class="font-mulish flex items-center space-x-2">
+                     <i data-feather="check" class="text-greenlight">↠</i>
+                     <span>Superior Checkout Experience</span>
+                  </li>
+                  <li class="font-mulish flex items-center space-x-2">
+                     <i data-feather="check" class="text-greenlight">↠</i>
+                     <span>Easy to Integrate</span>
+                  </li>
+                  <li class="font-mulish flex items-center space-x-2">
+                     <i data-feather="check" class="text-greenlight">↠</i>
+                     <span>Instant Settlements from day 1</span>
+                  </li>
+                  <li class="font-mulish flex items-center space-x-2">
+                     <i data-feather="check" class="text-greenlight">↠</i>
+                     <span>In-depth Reporting and Insights</span>
+                  </li>
+               </ul>
+               <div class="flex flex-row items-center gap-4">
+                   <button class="bg-lightblue w-fit text-white py-[14px] px-[18px] rounded-md font-mulish font-bold hover:bg-lightblue500 transition-all duration-200">Sign Up Now</button>
+                   <div class="cursor-pointer group">
+                     <a href="" class="font-mulish font-bold text-lightblue500 group-hover:text-greyblue transition-all duration-200">Know More ></a>
+                   </div>
+               </div>
+               <!--for button and hyperlink-->
+             </div>
+             <img src="./images/payment-suite.png" alt="" class="max-w-[600px] absolute right-0 bottom-0">
+          </div>
+       </div>
+
+       <!--card section-->
+       <div>
+          <!--box1-->
+
+          <!--box2-->
+
+          <!--box3-->
+          
+          <!--box4-->
+
+          <!--box5-->
+          
+          <!--box6-->
+       </div>
     </section>
 </body>
 </html>
