--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
        <img src="./images/feature-section1-dottedrows.png" loading="lazy" width="233px" height="167px" class="absolute -top-[8rem] left-[4rem]">
        <img src="./images/feature-section1-dottedrows.png" loading="lazy" width="233px" height="167px" class="absolute top-[0rem] right-0 inline-block rotate-180">
        <div class="relative w-11/12 max-w-[1080px] mx-auto pt-0">
-          <h2 class="font-l font-extrabold text-center text-2xl leading-1.2">Accept Payments with Razorpay Payment Suite</h2>
+          <h2 class="font-l font-extrabold text-center text-2xl leading-1.2 hidden md:block">Accept Payments with Razorpay Payment Suite</h2>
+          <h2 class="font-mullish text-center text-3xl leading-[1.2] font-extrabold  md:hidden">Explore Razorpay Payment Suite</h2>
           <!--heading-->
           <div class="w-6 h-1 mx-auto mt-4 mb-6 bg-lightblue"></div>
           <!--content box-->
@@ -159,7 +160,7 @@
              </div>
              <img src="./images/payment-suite.png" alt="" class="max-w-[600px] absolute right-0 bottom-0 hidden md:max-w-[400px] lg:max-w-[600px] md:block lg:block">
           </div>
-          <div class="w-full grid grid-cols-3 gap-4 mt-10">
+          <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-10">
           <div class="w-full min-h-[15rem] relative cursor-pointer">
               <img src="./images/payment-link-icon.svg" alt="" class="bg-lightblue absolute right-3 top-3 w-12 h-12 rounded-full">
              <svg
@@ -836,7 +837,7 @@
    <!--core features-->
   <section class="w-full bg-[url(/images/core-features-sectionBg.svg)] 
   bg-no-repeat bg-cover bg-center mt-14 relative corefeaturesection">
-      <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
+      <div class="relative w-11/12 max-w-[1080px] mx-auto pt-16 pb-14">
           <h2 class="font-l font-bold text-2xl text-center text-white">Features</h2>
           <div class="w-6 h-1 bg-greenlight mx-auto mt-4 mb-6"></div>
           <p
@@ -844,7 +845,7 @@
           >Empower your business with all the right tools to accept online payments and provide the best customer experience</p>
 
           <!--grid -->
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[2rem] mt-8">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[2rem] mt-10">
               <!--card1-->
               <div>
                   <img src="./images/instant-activation-icon.svg" alt=""
@@ -908,7 +909,7 @@
 
   <!--join razorpay section-->
 
-  <section class="bg-[#f5f8fe] relative pt-40 pb-12 -mt-[200px] -z-[100]">
+  <section class="bg-[#f5f8fe] relative pt-40 pb-12 -mt-[100px] -z-[100]">
 
     <div class="w-11/12 max-w-[1080px] mx-auto relative flex flex-col md:flex-row">
 
@@ -924,7 +925,7 @@
       </div>
 
       <!--right part-->
-      <div class="h-[500px] w-[500px] relative overflow-y-hidden mx-auto">
+      <div class="h-[500px] w-[400px] md:w-[500px] relative overflow-y-hidden mx-auto">
         <div style="background: linear-gradient(180deg, #f4f8ff, #fff0)"
         class="absolute w-full h-[150px] top-0 z-50">    </div>
 
@@ -980,7 +981,7 @@
 
 
     <!-- main content -->
-    <div class="flex flex-row xl:flex-row max-w-[960px] justify-evenly items-center mx-auto my-20 space-x-[10rem]">
+    <div class="flex flex-col  md:flex-row md:justify-center lg:flex-row  max-w-[960px]  justify-center items-center mx-auto my-20 md:space-x-[10rem] md:space-x-0">
       <!--left image -->
       <img src="./images/testimonial.jpg" alt=""
       height="320px"
@@ -988,7 +989,7 @@
       class="rounded-xl">
 
       <!-- riught part-->
-      <div class="max-w-[400px] flex flex-col">
+      <div class="max-w-[300px] md:max-w-[400px] flex flex-col">
         <img src="./images/quotes.svg" alt=""
         width="35px"
         height="40px"
@@ -1028,7 +1029,7 @@
     <div class="w-11/12 max-w-[1080px] relative flex flex-row items-center mx-auto justify-between space-x-20 pt-16">
 
       <!--left part-->
-      <div class="flex flex-col gap-5 mt-12 max-w-[600px]">
+      <div class="flex flex-col gap-5 mt-7 max-w-[600px]">
         <h2 class="font-mulish font-bold text-2xl text-white">Supercharge your business with Razorpay</h2>
         <div class="w-6 h-1 bg-greenlight"></div>
         <p class="font-mulish text-white">Sign up now to experience the future of payments and offer <br> your customers the best checkout experience.</p>
