--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,10 +28,10 @@
         }
    </style>
 </head>
-<body class="overflow-x-hidden scroll-smooth">
+<body class="overflow-x-hidden md:overflow-x-hidden lg:overflow-x-hidden scroll-smooth">
 <!--navbar-->
     <nav class="bg-deepblue">
-       <div class="relative w-[1080px] mx-auto flex items-center justify-between">
+       <div class="relative w-[1080px]   mx-auto flex items-center justify-between overflow-x-hidden">
           <a href="/" class="cursor-pointer py-7 pr-7">
              <img src="./images/logo.svg" alt="" 
               width="125px" height="30px">
@@ -78,11 +78,11 @@
               height="20px"
               class="hidden lg:block">
 
-              <button class="py-3 px-5 font-l text-white border-lightblue border rounded-sm text-sm font-bold">
+              <button class="py-3 px-5 font-l text-white border-lightblue border rounded-sm text-sm font-bold hidden lg:block">
                 Log in
               </button>
 
-              <button class="py-3 px-5 font-l text-lightblue300 bg-white border-lightblue border rounded-sm text-sm font-bold transition-all duration-200 hover:text-lightblue500">
+              <button class="py-3 px-5 font-l text-lightblue300 bg-white border-lightblue border rounded-sm text-sm font-bold transition-all duration-200 hover:text-lightblue500 hidden lg:block">
                 Sign Up ->
               </button>
           </div>
@@ -837,7 +837,7 @@
    <!--core features-->
   <section class="w-full bg-[url(/images/core-features-sectionBg.svg)] 
   bg-no-repeat bg-cover bg-center mt-14 relative corefeaturesection">
-      <div class="relative w-11/12 max-w-[1080px] mx-auto pt-16 pb-14">
+      <div class="relative w-11/12 max-w-[1080px] mx-auto pt-40 pb-14">
           <h2 class="font-l font-bold text-2xl text-center text-white">Features</h2>
           <div class="w-6 h-1 bg-greenlight mx-auto mt-4 mb-6"></div>
           <p
@@ -925,7 +925,7 @@
       </div>
 
       <!--right part-->
-      <div class="h-[500px] w-[400px] md:w-[500px] relative overflow-y-hidden mx-auto">
+      <div class="h-[500px] w-[300px] md:w-[500px] relative overflow-y-hidden mx-auto">
         <div style="background: linear-gradient(180deg, #f4f8ff, #fff0)"
         class="absolute w-full h-[150px] top-0 z-50">    </div>
 
@@ -1024,9 +1024,9 @@
   </section>
   
   <!-- cta section -->
-  <section class="bg-[url(/images/CTABg.svg)] w-full h-full bg-no-repeat bg-cover relative ctaSection min-h-[510px]">
+  <section class="bg-[url(/images/CTABg.svg)] w-full h-full bg-no-repeat bg-cover relative ctaSection min-h-[550px]">
     <!--main content box-->
-    <div class="w-11/12 max-w-[1080px] relative flex flex-row items-center mx-auto justify-between space-x-20 pt-16">
+    <div class="w-11/12 max-w-[1080px] relative flex flex-row items-center mx-auto justify-between space-x-20 pt-16 pb-15">
 
       <!--left part-->
       <div class="flex flex-col gap-5 mt-7 max-w-[600px]">
