--- a/love.html
+++ b/love.html
@@ -1132,7 +1132,7 @@
       </div>
 
       <!--right part-->
-      <div class="h-[500px] w-[500px] relative overflow-y-hidden mx-auto">
+      <div class="h-[500px] w-[350px] md:w-[500px] relative overflow-y-hidden mx-auto">
         <div style="background: linear-gradient(180deg, #f4f8ff, #fff0)"
         class="absolute w-full h-[150px] top-0 z-50">    </div>
 
